# mip_fom_experiments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: pep_experiment.py  plot_experiment.py  run_FISTA_experiment.sh  run_ISTA_experiment.sh  run_ISTA_scratch_experiment.sh  run_LP_experiment.sh  run_NNQP_experiment.sh  run_Portfolio_experiment.sh  run_experiment.py
experiments/GD/: Gradient_verifier.py
experiments/ISTA/: FISTA_hydra.py  FISTA_incremental.py  FISTA_pep.py  ISTA_hydra.py  ISTA_incremental.py  ISTA_pep.py  ISTA_scratch_incremental.py  ISTA_verifier.py  informs_plot.py  small_ISTA_plot.py
experiments/ISTA/test_data/: test_heatmap.py  x_heatmap.csv
experiments/LP/: LP.py  LP_incremental.py  LP_pep.py  LP_rel_incremental.py  mincost_flow.py  random_LP_class.py  small_LP_plot.py
experiments/NNQP/: NNQP.py  NNQP_pep.py  NNQP_plot.py  NNQP_plot_simple.py  NNQP_vec.py  test_l1.py
experiments/Portfolio/: PortfolioL1.py  PortfolioL2.py  Portfolio_pep.py
experiments/configs/ISTA/: ista_experiment.yaml  ista_scratch_experiment.yaml
experiments/configs/LP/: lp_experiment.yaml
experiments/configs/NNQP/: nnqp_experiment.yaml  nnqp_plot.yaml
experiments/configs/Portfolio/: portfolio_experiment.yaml
tests/: test_LP_pdhg.py  test_ista.py  test_linexpr.py  test_mincost_flow.py  test_placeholder.py  test_portfolio.py  test_vec_LUhat.py
