[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mip_algo_verify"
description = "Exact algorithm certification for first-order methods via mixed-integer programming"
readme = "README.md"
license = { text = "Apache 2.0" }
dynamic = ["version"]
authors = [
       { name = "Vinit Ranjan", email = "vranjan@princeton.edu" },
       { name = "Stefano Gualandi", email = "stefano.gualandi@unipv.it " },
       { name = "Andrea Lodi", email = "andrea.lodi@cornell.edu" },
       { name = "Bartolomeo Stellato", email = "bstellato@princeton.edu" },
]
dependencies = ["cvxpy", "jax"]

[tool.setuptools]

[project.optional-dependencies]
dev = [
       "gurobipy",
       "pytest",
       "pre-commit",
       "ruff",
       "ruff-lsp",
       "matplotlib",
       "ipdb",
       "hydra-core",
       "pandas",
       "networkx",
]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["build", "docs", "*__init__.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]
